# example-aws-iot-cmake-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  library.h  test.c
